--- a/app/assets/javascripts/discourse/app/templates/group-index.hbs
+++ b/app/assets/javascripts/discourse/app/templates/group-index.hbs
@@ -9,14 +9,25 @@
       }}
     {{/if}}
 
-    <div class="group-members-manage">
-      {{#if canManageGroup}}
-        {{d-button icon="plus"
+    {{#if canManageGroup}}
+      <div class="group-members-manage">
+        {{d-button
+          icon="plus"
           action=(route-action "showAddMembersModal")
           label="groups.manage.add_members"
-        class="btn-default group-members-add"}}
-      {{/if}}
-    </div>
+          class="btn-default group-members-add"
+        }}
+
+        {{#if currentUser.can_invite_to_forum}}
+          {{d-button
+            icon="plus"
+            action=(route-action "showInviteModal")
+            label="groups.manage.invite_members"
+            class="btn-default group-members-add"
+          }}
+        {{/if}}
+      </div>
+    {{/if}}
   </div>
 
   {{#if hasMembers}}
