UX: Hide email columns when `Hide Emails` is selected (#13502)
* UX: Scroll user list container when emails are present

--- a/app/assets/stylesheets/common/admin/admin_base.scss
+++ b/app/assets/stylesheets/common/admin/admin_base.scss
@@ -425,6 +425,9 @@ $mobile-breakpoint: 700px;
   .controls {
     @include clearfix;
   }
+  .users-list-container {
+    overflow-x: auto;
+  }
 }
 
 .admin-title {
