Just start using on desktop the hidden input that we already use on mobile

--- a/app/assets/stylesheets/common/base/compose.scss
+++ b/app/assets/stylesheets/common/base/compose.scss
@@ -362,6 +362,10 @@
   #file-uploading {
     color: var(--primary-high);
   }
+
+  #mobile-uploader {
+    display: none;
+  }
 }
 
 .autocomplete {
