--- a/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
@@ -19,4 +19,4 @@
   disabled=disableTextarea
   outletArgs=(hash composer=composer editorType="composer")}}
 
-<input type="file" id="mobile-uploader" multiple>
+<input type="file" id="file-uploader" multiple>
