UX: Horizontal scroll bar on top of user directory (when needed)

--- a/app/assets/stylesheets/common/base/directory.scss
+++ b/app/assets/stylesheets/common/base/directory.scss
@@ -6,6 +6,16 @@
     overflow-x: auto;
   }
 
+  .directory-table-top-scroll {
+    width: 100%;
+    overflow-x: auto;
+
+    &-fake-content {
+      height: 1px;
+    }
+  }
+
+
   .open-edit-columns-btn {
     vertical-align: top;
     padding: 0.45em 0.8em;
