--- a/app/assets/javascripts/discourse/app/templates/preferences/account.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/account.hbs
@@ -161,6 +161,21 @@
   </div>
 {{/if}}
 
+{{#if canSelectFlair}}
+  <div class="control-group pref-flair">
+    <label class="control-label">{{i18n "user.flair.title"}}</label>
+    <div class="controls">
+      {{#each model.availableFlairs as |flair|}}
+        {{#if flair.imageUrl}}
+          <button type="button" {{action "selectFlair" flair}} class="flair-image {{if (eq newFlairGroupId flair.id) "flair-selected"}}" style={{flair.style}} title={{flair.name}}></button>
+        {{else if flair.icon}}
+          <button type="button" {{action "selectFlair" flair}} class="flair-icon {{if (eq newFlairGroupId flair.id) "flair-selected"}}" style={{flair.style}} title={{flair.name}}>{{d-icon flair.icon}}</button>
+        {{/if}}
+      {{/each}}
+    </div>
+  </div>
+{{/if}}
+
 {{#if canSelectPrimaryGroup}}
   <div class="control-group pref-primary-group">
     <label class="control-label">{{i18n "user.primary_group.title"}}</label>
