Review fix: do not rename the resource key to avoid forcing retranslation

--- a/app/assets/javascripts/discourse/app/templates/components/image-uploader.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/image-uploader.hbs
@@ -26,7 +26,7 @@
       }}
     {{/if}}
 
-    <span class="btn {{unless uploading "hidden"}}">{{i18n "upload_file.uploading"}} {{uploadProgress}}%</span>
+    <span class="btn {{unless uploading "hidden"}}">{{i18n "upload_selector.uploading"}} {{uploadProgress}}%</span>
   </div>
 
   {{#if imageUrl}}
