--- a/app/assets/javascripts/admin/addon/templates/badges-award.hbs
+++ b/app/assets/javascripts/admin/addon/templates/badges-award.hbs
@@ -21,6 +21,12 @@
           {{input type="checkbox" checked=replaceBadgeOwners}}
           {{i18n "admin.badges.mass_award.replace_owners"}}
         </label>
+        {{#if model.multiple_grant}}
+          <label>
+            {{input type="checkbox" checked=grantExistingHolders class="grant-existing-holders"}}
+            {{i18n "admin.badges.mass_award.grant_existing_holders"}}
+          </label>
+        {{/if}}
       </div>
       {{d-button
           class="btn-primary"
