--- a/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
@@ -19,4 +19,11 @@
   disabled=disableTextarea
   outletArgs=(hash composer=composer editorType="composer")}}
 
-<input type="file" id="file-uploader" multiple>
+{{#if allowUpload}}
+  {{#if acceptsAllFormats}}
+    <input type="file" id="file-uploader" multiple>
+  {{else}}
+    <input type="file" id="file-uploader" accept={{acceptedFormats}}  multiple>
+  {{/if}}
+{{/if}}
+
