FEATURE: Use a select kit component

--- a/app/assets/javascripts/discourse/app/templates/preferences/account.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/account.hbs
@@ -158,6 +158,9 @@
         onChange=(action (mut newTitleInput))
       }}
     </div>
+    <div class="instructions">
+      {{i18n "user.title.instructions"}}
+    </div>
   </div>
 {{/if}}
 
@@ -165,6 +168,13 @@
   <div class="control-group pref-flair">
     <label class="control-label">{{i18n "user.flair.title"}}</label>
     <div class="controls">
+      {{flair-chooser
+        value=newFlairGroupId
+        content=model.availableFlairs
+        none="user.flair.none"
+        onChange=(action (mut newFlairGroupId))
+      }}
+
       {{#each model.availableFlairs as |flair|}}
         {{#if flair.imageUrl}}
           <button type="button" {{action "selectFlair" flair}} class="flair-image {{if (eq newFlairGroupId flair.id) "flair-selected"}}" style={{flair.style}} title={{flair.name}}></button>
@@ -172,6 +182,9 @@
           <button type="button" {{action "selectFlair" flair}} class="flair-icon {{if (eq newFlairGroupId flair.id) "flair-selected"}}" style={{flair.style}} title={{flair.name}}>{{d-icon flair.icon}}</button>
         {{/if}}
       {{/each}}
+    </div>
+    <div class="instructions">
+      {{i18n "user.flair.instructions"}}
     </div>
   </div>
 {{/if}}
