DEV: Apply code suggestions

--- a/app/assets/javascripts/discourse/app/templates/components/user-avatar-flair.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/user-avatar-flair.hbs
@@ -1,6 +1,6 @@
 {{#if flair}}
   {{avatar-flair
-    flairName=flair.groupName
+    flairName=flair.flairName
     flairUrl=flair.flairUrl
     flairBgColor=flair.flairBgColor
     flairColor=flair.flairColor
