--- a/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
+++ b/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
@@ -6,11 +6,14 @@
     {{/if}}
 
     <div class="penalty-history">
-      <label>
-        {{i18n "admin.user.penalty_history"}}
-      </label>
-      <div class="suspended-count">{{i18n "admin.user.tl3_requirements.suspended"}}: {{user.penalty_counts.suspended}}</div>
-      <div class="silenced-count">{{i18n "admin.user.tl3_requirements.silenced"}}: {{user.penalty_counts.silenced}}</div>
+      <div class="suspended-count {{suspendedCountClass}}" title={{i18n "admin.user.last_six_months"}}>
+        <label>{{i18n "admin.user.suspended_count"}}</label>
+        <span>{{user.penalty_counts.suspended}}</span>
+      </div>
+      <div class="silenced-count {{silencedCountClass}}" title={{i18n "admin.user.last_six_months"}}>
+        <label>{{i18n "admin.user.silenced_count"}}</label>
+        <span>{{user.penalty_counts.silenced}}</span>
+      </div>
     </div>
 
     <div class="until-controls">
