--- a/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
+++ b/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
@@ -5,16 +5,7 @@
       <div class="alert alert-error">{{errorMessage}}</div>
     {{/if}}
 
-    <div class="penalty-history">
-      <div class="suspended-count {{suspendedCountClass}}" title={{i18n "admin.user.last_six_months"}}>
-        <label>{{i18n "admin.user.suspended_count"}}</label>
-        <span>{{user.penalty_counts.suspended}}</span>
-      </div>
-      <div class="silenced-count {{silencedCountClass}}" title={{i18n "admin.user.last_six_months"}}>
-        <label>{{i18n "admin.user.silenced_count"}}</label>
-        <span>{{user.penalty_counts.silenced}}</span>
-      </div>
-    </div>
+    {{admin-penalty-history user=user}}
 
     <div class="until-controls">
       <label>
