UX: Remove top border on small action after last visit line.
Follow-up to 37b8ce79c99f4e8dd1c5aee0d3dd8cfe1ef4249b

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -1043,6 +1043,10 @@ a.mention-group {
     font-size: $font-down-1;
     padding: 0 8px;
   }
+
+  + .small-action {
+    border-top: none;
+  }
 }
 
 // Select posts
