--- a/app/assets/javascripts/admin/addon/templates/badges-award.hbs
+++ b/app/assets/javascripts/admin/addon/templates/badges-award.hbs
@@ -22,7 +22,7 @@
           {{i18n "admin.badges.mass_award.replace_owners"}}
         </label>
         {{#if model.multiple_grant}}
-          <label>
+          <label class="grant-existing-holders">
             {{input type="checkbox" checked=grantExistingHolders class="grant-existing-holders"}}
             {{i18n "admin.badges.mass_award.grant_existing_holders"}}
           </label>
