TGX feedback + retry deadlock errors

--- a/app/assets/javascripts/admin/addon/templates/badges-award.hbs
+++ b/app/assets/javascripts/admin/addon/templates/badges-award.hbs
@@ -23,7 +23,7 @@
         </label>
         {{#if model.multiple_grant}}
           <label class="grant-existing-holders">
-            {{input type="checkbox" checked=grantExistingHolders class="grant-existing-holders"}}
+            {{input type="checkbox" checked=grantExistingHolders class="grant-existing-holders-checkbox"}}
             {{i18n "admin.badges.mass_award.grant_existing_holders"}}
           </label>
         {{/if}}
