Refactor and add support for @mention suggestions

--- a/app/assets/stylesheets/common/base/search-menu.scss
+++ b/app/assets/stylesheets/common/base/search-menu.scss
@@ -267,8 +267,10 @@
         margin-right: 0.5em;
       }
 
-      .search-item-everything {
-        color: var(--primary-low-mid);
+      .search-item-user {
+        .avatar {
+          margin-right: 0.5em;
+        }
       }
     }
   }
