Minor SCSS refactor

--- a/app/assets/stylesheets/common/base/search-menu.scss
+++ b/app/assets/stylesheets/common/base/search-menu.scss
@@ -263,14 +263,9 @@
         }
       }
 
+      .search-item-user .avatar,
       .search-item-prefix {
         margin-right: 0.5em;
-      }
-
-      .search-item-user {
-        .avatar {
-          margin-right: 0.5em;
-        }
       }
     }
   }
