--- a/app/assets/javascripts/discourse/app/templates/components/basic-topic-list.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/basic-topic-list.hbs
@@ -2,7 +2,7 @@
   {{#if hasIncoming}}
     <div class="show-mores">
       <a tabindex="0" href {{action showInserted}} class="alert alert-info clickable">
-        {{count-i18n key="topic_count_" suffix="latest" count=2}}
+        {{count-i18n key="topic_count_" suffix="latest" count=incomingCount}}
       </a>
     </div>
   {{/if}}
