FIX: allows to use icon-picker in wizard
- inlines dasherize helper in sk
- uses an ajax helper to load wizard's ajax lib when in wizard
- amends wizard's ajax lib to work with string as first arg
- disabled loading spinner in wizard as it's not available

--- a/app/assets/javascripts/select-kit/addon/templates/components/multi-select.hbs
+++ b/app/assets/javascripts/select-kit/addon/templates/components/multi-select.hbs
@@ -10,7 +10,9 @@
   {{#select-kit/select-kit-body selectKit=selectKit id=(concat selectKit.uniqueID "-body")}}
     {{#if selectKit.isLoading}}
       <span class="is-loading">
-        {{loading-spinner size="small"}}
+        {{#if site}}
+          {{loading-spinner size="small"}}
+        {{/if}}
       </span>
     {{else}}
       {{#if selectKit.filter}}
