--- a/app/assets/javascripts/discourse/app/templates/components/uppy-image-uploader.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/uppy-image-uploader.hbs
@@ -3,9 +3,9 @@
     <div class="placeholder-overlay" style={{placeholderStyle}}></div>
   {{/if}}
   <div class="image-upload-controls">
-    <label class="btn btn-default pad-left no-text {{if uploading "disabled"}}">
+    <label class="btn btn-default pad-left no-text {{if uploadingOrProcessing "disabled"}}">
       {{d-icon "far-image"}}
-      <input class="hidden-upload-field" disabled={{uploading}} type="file" accept="image/*">
+      <input class="hidden-upload-field" disabled={{uploadingOrProcessing}} type="file" accept="image/*">
     </label>
 
     {{#if imageUrl}}
@@ -27,6 +27,7 @@
     {{/if}}
 
     <span class="btn {{unless uploading "hidden"}}">{{i18n "upload_selector.uploading"}} {{uploadProgress}}%</span>
+    <span class="btn {{unless processing "hidden"}}">{{i18n "upload_selector.processing"}}</span>
   </div>
 
   {{#if imageUrl}}
