FEATURE: Show draft count in user menu and activity
This commit adds the number of drafts a user has next to the "Draft"
label in the user preferences menu and activity tab. The count is
updated via MessageBus when a draft is created or destroyed.

--- a/app/assets/javascripts/discourse/app/templates/user/activity.hbs
+++ b/app/assets/javascripts/discourse/app/templates/user/activity.hbs
@@ -13,7 +13,7 @@
 
       {{#if user.showDrafts}}
         {{#d-navigation-item route="userActivity.drafts"}}
-          {{i18n "user_action_groups.15"}}
+          {{draftLabel}}
         {{/d-navigation-item}}
       {{/if}}
 
