--- a/app/assets/javascripts/discourse/app/templates/user-topics-list.hbs
+++ b/app/assets/javascripts/discourse/app/templates/user-topics-list.hbs
@@ -5,20 +5,41 @@
 {{/unless}}
 
 {{#load-more class="paginated-topics-list" selector=".paginated-topics-list .topic-list tr" action=(action "loadMore")}}
+  {{topic-dismiss-buttons
+      position="top"
+      selectedTopics=selected
+      model=model
+      showResetNew=showResetNew
+      showDismissRead=showDismissRead
+      resetNew=(action "resetNew")}}
+
+  {{#if hasIncoming}}
+    <div class="show-mores">
+      <a tabindex="0" href {{action "showInserted"}} class="alert alert-info clickable">
+        {{count-i18n key="topic_count_" suffix="latest" count=incomingCount}}
+      </a>
+    </div>
+  {{/if}}
+
   {{basic-topic-list topicList=model
                      hideCategory=hideCategory
                      showPosters=showPosters
                      bulkSelectEnabled=bulkSelectEnabled
                      selected=selected
-                     hasIncoming=hasIncoming
-                     incomingCount=incomingCount
-                     showInserted=(action "showInserted")
                      tagsForUser=tagsForUser
                      onScroll=saveScrollPosition
                      canBulkSelect=canBulkSelect
                      scrollOnLoad=true
                      toggleBulkSelect=(action "toggleBulkSelect")
                      updateAutoAddTopicsToBulkSelect=(action "updateAutoAddTopicsToBulkSelect")}}
+
+  {{topic-dismiss-buttons
+      position="bottom"
+      selectedTopics=selected
+      model=model
+      showResetNew=showResetNew
+      showDismissRead=showDismissRead
+      resetNew=(action "resetNew")}}
 
   {{conditional-loading-spinner condition=model.loadingMore}}
 {{/load-more}}
