adds hover title with full date

--- a/app/assets/javascripts/admin/addon/templates/users-list-show.hbs
+++ b/app/assets/javascripts/admin/addon/templates/users-list-show.hbs
@@ -72,7 +72,7 @@
               <div>{{format-duration user.time_read}}</div>
             </td>
 
-            <td class="created">
+            <td class="created" title={{raw-date user.created_at}}>
               <div class="label">{{i18n "created"}}</div>
               <div>{{format-duration user.created_at_age}}</div>
             </td>
