--- a/app/assets/javascripts/admin/addon/templates/users-list-show.hbs
+++ b/app/assets/javascripts/admin/addon/templates/users-list-show.hbs
@@ -51,11 +51,20 @@
             <td class="email {{if showEmails "" "hidden"}}">
               {{~user.email~}}
             </td>
-            <td class="last-emailed">
-              <div class="label">{{i18n "admin.users.last_emailed"}}</div>
-              <div>{{format-duration user.last_emailed_age}}</div>
-            </td>
-            <td class="last-seen">
+
+            {{#if user.last_emailed_at}}
+              <td class="last-emailed" title={{raw-date user.last_emailed_at}}>
+                <div class="label">{{i18n "admin.users.last_emailed"}}</div>
+                <div>{{format-duration user.last_emailed_age}}</div>
+              </td>
+            {{else}}
+              <td class="last-emailed">
+                <div class="label">{{i18n "admin.users.last_emailed"}}</div>
+                <div>{{format-duration user.last_emailed_age}}</div>
+              </td>
+            {{/if}}
+
+            <td class="last-seen" title={{raw-date user.last_seen_at}}>
               <div class="label">{{i18n "last_seen"}}</div>
               <div>{{format-duration user.last_seen_age}}</div>
             </td>
