--- a/app/assets/stylesheets/common/select-kit/email-group-user-chooser.scss
+++ b/app/assets/stylesheets/common/select-kit/email-group-user-chooser.scss
@@ -15,7 +15,7 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
-      // align-self: flex-end;
+      align-self: flex-end;
     }
     .avatar,
     .d-icon {
