FEATURE: First pass of using uppy in the composer
Adds uppy upload functionality behind a
`enable_experimental_composer_uploader` site setting (default false,
and hidden).

When enabled this site setting will make the `composer-editor-uppy`
component be used within composer.hbs, which in turn points to
a `ComposerUploadUppy` mixin which overrides the relevant
functions from `ComposerUpload`. This uppy uploader has parity
with all the features of jQuery file uploader in the original
composer-editor, including:

* progress tracking
* error handling
* number of files validation
* pasting files
* dragging and dropping files
* updating upload placeholders
* upload markdown resolvers
* processing actions (the only one we have so far is the media optimization
  worker by falco, this works)
* cancelling uploads

For now all uploads still go via the /uploads.json endpoint, direct
S3 support will be added later.

Also included in this PR are some changes to the media optimization
service, to support uppy's different file data structures, and also
to make the promise tracking and resolving more robust. Currently
it uses the file name to track promises, we can switch to something
more unique later if needed.

Does not include custom upload handlers, that will come
in a later PR, it is a tricky problem to handle.

--- a/app/assets/javascripts/discourse/app/templates/composer.hbs
+++ b/app/assets/javascripts/discourse/app/templates/composer.hbs
@@ -108,7 +108,8 @@
 
         </div>
 
-        {{composer-editor topic=topic
+        {{component composerComponent
+                          topic=topic
                           composer=model
                           lastValidatedAt=lastValidatedAt
                           canWhisper=canWhisper
