DEV: do not process composer preview when collapsed
Note that I would prefer to not use the observer but that would end up being a way bigger and risky refactor.

--- a/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/composer-editor.hbs
@@ -8,6 +8,7 @@
   importQuote=(action "importQuote")
   showUploadModal=showUploadModal
   togglePreview=(action "togglePreview")
+  processPreview=processPreview
   validation=validation
   loading=composer.loading
   forcePreview=forcePreview
