UX: disable "Queue For Review" button if user can't perform action.
Currently, it's returning JS error when try to click the button when the action is already performed by the same staff user.

--- a/app/assets/javascripts/discourse/app/templates/modal/flag.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/flag.hbs
@@ -44,6 +44,7 @@
     {{d-button
       class="btn-danger"
       action=(action "flagForReview")
+      disabled=cantFlagForReview
       icon="exclamation-triangle"
       label="flagging.flag_for_review"
     }}
