FIX: RTL fix for pull right

--- a/app/assets/stylesheets/common/base/rtl.scss
+++ b/app/assets/stylesheets/common/base/rtl.scss
@@ -33,6 +33,9 @@
 .rtl .pull-left {
   float: right !important;
 }
+.rtl .pull-right {
+  float: left !important;
+}
 .rtl .autocomplete {
   left: 27px;
 }
