makes clicking on row more reliable

--- a/app/assets/stylesheets/common/select-kit/select-kit.scss
+++ b/app/assets/stylesheets/common/select-kit/select-kit.scss
@@ -169,6 +169,10 @@
     justify-content: flex-start;
     padding: 0.5em;
 
+    > * {
+      pointer-events: none;
+    }
+
     .name {
       margin: 0;
       overflow: hidden;
