--- a/app/assets/javascripts/discourse/app/templates/user/messages.hbs
+++ b/app/assets/javascripts/discourse/app/templates/user/messages.hbs
@@ -101,7 +101,7 @@
 
     {{#if displayGlobalFilters}}
       {{#if pmTaggingEnabled}}
-        <li class="noGlyph tags">
+        <li class="tags">
           {{#link-to "userPrivateMessages.tags" model}}
             {{i18n "user.messages.tags"}}
           {{/link-to}}
