UX: Add styling step to wizard
Merges `font` and `colors` steps into one.

--- a/app/assets/stylesheets/wizard.scss
+++ b/app/assets/stylesheets/wizard.scss
@@ -873,7 +873,7 @@ body.wizard {
   }
 }
 
-.wizard-step-fonts {
+.wizard-step-styling {
   .dropdown-field {
     float: left;
     margin-right: 1.5em;
