Replace observers with action in SK

--- a/app/assets/javascripts/wizard/templates/components/styling-preview.hbs
+++ b/app/assets/javascripts/wizard/templates/components/styling-preview.hbs
@@ -4,7 +4,11 @@
     </canvas>
   </div>
   <div class="preview-area homepage-preview">
-    {{homepage-preview wizard=wizard step=step}}
+    {{homepage-preview
+      wizard=wizard
+      step=step
+      stylingDropdown=stylingDropdown
+    }}
   </div>
 </div>
 
