--- a/app/assets/javascripts/wizard/templates/components/wizard-field-dropdown.hbs
+++ b/app/assets/javascripts/wizard/templates/components/wizard-field-dropdown.hbs
@@ -5,7 +5,7 @@
   content=field.choices
   nameProperty="label"
   tabindex="9"
-  onChange=(action (mut field.value))
+  onChange=(action "onChangeValue")
   options=(hash
     translatedNone=false
   )
