--- a/app/assets/javascripts/wizard/templates/components/wizard-step.hbs
+++ b/app/assets/javascripts/wizard/templates/components/wizard-step.hbs
@@ -18,7 +18,12 @@
       <div class="wizard-fields-sidebar">
         {{#each step.fields as |field|}}
           {{#if field.show_in_sidebar}}
-            {{wizard-field field=field step=step wizard=wizard}}
+            {{wizard-field
+              field=field
+              step=step
+              wizard=wizard
+              stylingDropdownChanged=(action "stylingDropdownChanged")
+            }}
           {{/if}}
         {{/each}}
       </div>
@@ -26,7 +31,12 @@
     <div class="wizard-fields-main">
       {{#each step.fields as |field|}}
         {{#unless field.show_in_sidebar}}
-          {{wizard-field field=field step=step wizard=wizard}}
+          {{wizard-field
+            field=field
+            step=step
+            wizard=wizard
+            stylingDropdown=stylingDropdown
+          }}
         {{/unless}}
       {{/each}}
     </div>
