Normalize form item styling, add `inline-form` helper

--- a/app/assets/javascripts/select-kit/addon/templates/components/dropdown-select-box/dropdown-select-box-header.hbs
+++ b/app/assets/javascripts/select-kit/addon/templates/components/dropdown-select-box/dropdown-select-box-header.hbs
@@ -11,4 +11,6 @@
   {{#if selectKit.options.showCaret}}
     {{d-icon caretIcon class="caret-icon"}}
   {{/if}}
+  <wbr>
+  {{! Zero-width space character, so icon-only button height = regular button height }}
 </div>
