--- a/app/assets/javascripts/discourse/app/templates/components/d-button.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/d-button.hbs
@@ -12,6 +12,9 @@
 
 {{~#if computedLabel~}}
   <span class="d-button-label">{{html-safe computedLabel}}{{#if ellipsis}}&hellip;{{/if}}</span>
+{{~else~}}
+  <wbr>
+  {{! Zero-width space character, so icon-only button height = regular button height }}
 {{~/if~}}
 
 {{yield}}
