--- a/app/assets/stylesheets/common/foundation/mixins.scss
+++ b/app/assets/stylesheets/common/foundation/mixins.scss
@@ -75,6 +75,23 @@ $breakpoints: (
 //
 // --------------------------------------------------
 
+$vpad: 0.53em;
+
+@mixin form-item-sizing {
+  // for consistent sizing across inputs, buttons and dropdowns
+  border: 1px solid transparent;
+  font-size: var(--font-0);
+  line-height: normal;
+  box-sizing: border-box;
+  padding-top: $vpad;
+  padding-bottom: $vpad;
+  .ios-device & {
+    font-size: var(--font-size-ios-input);
+    padding-top: $vpad * 0.8;
+    padding-bottom: $vpad * 0.8;
+  }
+}
+
 @mixin sticky {
   position: -webkit-sticky;
   position: sticky;
