--- a/app/assets/stylesheets/mobile/compose.scss
+++ b/app/assets/stylesheets/mobile/compose.scss
@@ -193,6 +193,16 @@
         }
       }
     }
+
+    .formated-selection {
+      font-size: var(--font-down-1);
+    }
+  }
+
+  .without-tags {
+    .category-input {
+      margin-left: 5px;
+    }
   }
 
   .user-selector {
