Add full-width option to inline forms, use it for search bar in user bookmark list
Note that assign also needs a similar refactor.

--- a/app/assets/stylesheets/common/foundation/base.scss
+++ b/app/assets/stylesheets/common/foundation/base.scss
@@ -162,6 +162,9 @@ input[type="submit"] {
   display: inline-flex;
   align-items: center;
   flex-wrap: wrap;
+  &.full-width {
+    display: flex;
+  }
 
   input[type="text"] {
     display: inline-flex;
